Twenty Thirteen: fix pixel shift that can occur on gallery non-single views in latest Chrome. Props jeremyfelt, fixes #24310.
git-svn-id: http://core.svn.wordpress.org/trunk@24286 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -1599,6 +1599,7 @@ footer.entry-meta {
 .blog .format-gallery .gallery-item .gallery-icon img,
 .archive .format-gallery .gallery-item .gallery-icon img,
 .search .format-gallery .gallery-item .gallery-icon img {
+	-webkit-backface-visibility: hidden;
 	-webkit-transform: translate(-50%, -50%);
 	-ms-transform:     translate(-50%, -50%);
 	transform:         translate(-50%, -50%);
